$Id$

2018-09-21  Christian Franke  <franke@computer.org>

	configure.ac: Rework __USE_MINGW_ANSI_STDIO test for MinGW runtime.

	configure.ac: Check for 'libcap-ng' only on Linux.

	Add systemd(1) notify support to smartd (#1081):
	configure.ac: Add option '--with-libsystemd'.
	Makefile.am: Add linker flag and man page conditional.
	smartd.cpp: If environment variable NOTIFY_SOCKET is set, use
	sd_notify(3) to inform the service manager about state changes.
	smartd.service.in: Set 'Type=notify'.
	smartd.8.in: Document new functionality.

2018-09-16  Christian Franke  <franke@computer.org>

	atacmds.cpp: Avoid possible virtual call in dtor
	(cppcheck 1.84: virtualCallInConstructor).

	os_win32.cpp: Use unsigned int for bit shifts
	(cppcheck 1.84: shiftTooManyBitsSigned).

	Makefile.am: Set HAVE_WORKING_SNPRINTF also in VC14 config.h.

	os_netbsd.cpp: Add spaces between string literals and macros for
	C++11 (g++ -Wliteral-suffix).

	ataprint.cpp: Add JSON support for '-l selective'.

	drivedb.h: Update or remove links in warning messages.

	drivedb.h: Crucial/Micron BX300, MX1/2/3/500, M5/600, 1100 SSDs:
	- Rename,
	- Crucial BX300 (GH pull/16, #963),
	- Crucial MX300 750GB,
	- Crucial MX500 (#977, #994, #995, #1004, #1024),
	- Micron M500IT (#958),
	- Micron 1100 OEM (GH pull/17),
	- fix name of attribute 202 and 248.

2018-09-12  Christian Franke  <franke@computer.org>

	ataprint.cpp: Get JSON values 'temperature.op_limit_min/max' from
	Device Statistics.

	atacmds.h, ataprint.cpp: Print ACS-4 max operating temperature
	from SCT Status.

	Makefile.am: Remove define of 'HAVE_GETOPT_LONG'.
	os*.cpp: Remove remaining checks for 'HAVE_GETOPT_LONG'.

	configure.ac: Remove check for 'uname()'.
	os_generic.cpp, os_qnxnto.cpp: Remove function 'unsupported()'.

	drivedb.h:
	- HGST Deskstar NAS: *6040ALE614 (#935, #1089)
	- HGST Ultrastar DC HC520 (He12) (#1086)

2018-09-12  Anthony D'Atri  <anthony.datri@gmail.com>

	drivedb.h: Micron 5100 Pro / 5200 SSDs (#1071)
